--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "Cinemas": {
+    "cinemas": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/Cinemas",
+            "outputPath": "dist/cinemas",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -23,7 +23,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": [],
             "es5BrowserSupport": true
@@ -58,18 +59,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "Cinemas:build"
+            "browserTarget": "cinemas:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "Cinemas:build:production"
+              "browserTarget": "cinemas:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "Cinemas:build"
+            "browserTarget": "cinemas:build"
           }
         },
         "test": {
@@ -103,7 +104,7 @@
         }
       }
     },
-    "Cinemas-e2e": {
+    "cinemas-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "prefix": "",
@@ -112,11 +113,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "Cinemas:serve"
+            "devServerTarget": "cinemas:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "Cinemas:serve:production"
+              "devServerTarget": "cinemas:serve:production"
             }
           }
         },
@@ -132,5 +133,5 @@
       }
     }
   },
-  "defaultProject": "Cinemas"
+  "defaultProject": "cinemas"
 }
